examples/invalid/01_top_level_let_missing_type.lane
// invalid: top-level let must include an explicit type annotation
let answer = 42

